# velixar-python

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  fastapi_middleware.py  langchain_agent.py
tests/: test_async_client.py  test_client.py
velixar/: __init__.py  client.py  config.py  exceptions.py  sanitize.py  types.py
velixar/integrations/: __init__.py  langchain.py  llamaindex.py  openai.py
